# AutoAgent

./: README.md
backend/: .env.example  README.md  main.py  pyproject.toml  requirements.txt  test_search.py
backend/app/: __init__.py
backend/app/api/: __init__.py  routes.py
backend/app/core/: __init__.py  agent.py  config.py  models.py
backend/app/tools/: __init__.py  conversion_tools.py  currency_tools.py  search_tools.py
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: ChatInput.tsx  ChatMessage.tsx  ProcessingSteps.tsx
frontend/src/types/: chat.ts
frontend/src/utils/: markdown.ts
